<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.GigsListActivity">

    <item
        android:id="@+id/action_user_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_user_delete"
        android:title="@string/delete_user"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        android:visible="true"
        app:showAsAction="never" />

</menu>