<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.GigsListActivity"
    tools:showIn="@layout/activity_gigs_list">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_giglist_footer"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <!-- Recycler View used in Gigs List Activity -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_gigs"
        android:scrollbars="vertical"
        android:layout_below="@id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item_card"/>
</RelativeLayout>
