...
    <string name="title_activity_new_gig">NewGig</string>
    <string name="btn_log_in">Log In</string>
    <string name="btn_register">Register</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="title_activity_gigs_list">Next Live Events</string>
    <string name="menu_logout">Log Out</string>
    <string name="hint_name">Name, Band\'s name, or Venue</string>
    <string name="field_required_warning">Required</string>
    <!-- AdMob ad unit IDs -->
    <string name="banner_giglist_footer">ca-app-pub-4576286156127371/7898648368</string>
    <string name="title_activity_gig_details">GigDetailsActivity</string>

...
