...
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:textSize="36dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/layout_email_password"
...
